# ZQCNN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ZQCNN.sln  ZQlibFaceID.sln  build-with-cmake.md  build.sh  export_spherefacenet04_caffemodel_to_nchw_binary.m  export_spherefacenet04bn256_caffemodel_to_nchw_binary.m  export_spherefacenet20_caffemodel_to_nchw_binary.m  和mini-caffe比较.xlsx
SamplesZQCNN/: CMakeLists.txt
SamplesZQCNN/CompareWithOpenBLAS/: CompareWithOpenBLAS.cpp  CompareWithOpenBLAS.vcxproj
SamplesZQCNN/SampleBLISLAB/: SampleBLISLAB.vcxproj  SampleBLISLAB.vcxproj.filters  bl_config.h  bl_sgemm.h  bl_sgemm_kernel.h  bl_sgemm_opt_4x4.c  bl_sgemm_ref.c  bl_sgemm_ref.h  bl_sgemm_util.c  my_sgemm.c  test_bl_sgemm.c
SamplesZQCNN/SampleCascadeOnet/: SampleCascadeOnet.cpp  SampleCascadeOnet.vcxproj  SampleCascadeOnet.vcxproj.filters
SamplesZQCNN/SampleCascadeOnet_Interface/: SampleCascadeOnet_Interface.cpp  SampleCascadeOnet_Interface.vcxproj  SampleCascadeOnet_Interface.vcxproj.filters
SamplesZQCNN/SampleDetectMouth/: SampleDetectMouth.cpp  SampleDetectMouth.vcxproj  SampleDetectMouth.vcxproj.filters  SampleMouthDetector.h
SamplesZQCNN/SampleFacialNet/: SampleFacialNet.cpp  SampleFacialNet.vcxproj  SampleFacialNet.vcxproj.filters
SamplesZQCNN/SampleGEPB/: SampleGEPB.cpp  SampleGEPB.vcxproj  SampleGEPB.vcxproj.filters
SamplesZQCNN/SampleGenderAge/: SampleGenderAge.cpp  SampleGenderAge.vcxproj  SampleGenderAge.vcxproj.filters
SamplesZQCNN/SampleHeatMap/: SampleHeatMap.cpp  SampleHeatMap.vcxproj  SampleHeatMap.vcxproj.filters
SamplesZQCNN/SampleLnet/: SampleLnet.cpp  SampleLnet.vcxproj  SampleLnet.vcxproj.filters
SamplesZQCNN/SampleLnet106/: SampleLnet106.cpp  SampleLnet106.vcxproj  SampleLnet106.vcxproj.filters  ZQ_HeadPoseEstimation.h
SamplesZQCNN/SampleLnet106_vis/: SampleLnet106_vis.cpp  SampleLnet106_vis.vcxproj  SampleLnet106_vis.vcxproj.filters
SamplesZQCNN/SampleLnet240/: SampleLnet240.cpp  SampleLnet240.vcxproj  SampleLnet240.vcxproj.filters
SamplesZQCNN/SampleLnetMouth/: SampleLnetMouth.cpp  SampleLnetMouth.vcxproj  SampleLnetMouth.vcxproj.filters
SamplesZQCNN/SampleMTCNN/: SampleMTCNN.cpp  SampleMTCNN.vcxproj
SamplesZQCNN/SampleMTCNNGesture/: SampleMTCNNGesture.cpp  SampleMTCNNGesture.vcxproj  SampleMTCNNGesture.vcxproj.filters
SamplesZQCNN/SampleMTCNNLoadFromCode/: SampleMTCNNLoadFromCode.cpp  SampleMTCNNLoadFromCode.vcxproj  SampleMTCNNLoadFromCode.vcxproj.filters  det1_dw20_model.h  det2_dw24_model.h
SamplesZQCNN/SampleMTCNN_AspectRatio/: SampleMTCNN_AspectRatio.cpp  SampleMTCNN_AspectRatio.vcxproj  SampleMTCNN_AspectRatio.vcxproj.filters
SamplesZQCNN/SampleMTCNN_Interface/: SampleMTCNN_Interface.cpp  SampleMTCNN_Interface.vcxproj  SampleMTCNN_Interface.vcxproj.filters
SamplesZQCNN/SampleMTCNN_NCHWC4/: SampleMTCNN_NCHWC4.cpp  SampleMTCNN_NCHWC4.vcxproj  SampleMTCNN_NCHWC4.vcxproj.filters
SamplesZQCNN/SampleMTCNN_Video/: SampleMTCNN_Video.cpp  SampleMTCNN_Video.vcxproj  SampleMTCNN_Video.vcxproj.filters
SamplesZQCNN/SampleMTCNNfromlist/: SampleMTCNNfromlist.cpp  SampleMTCNNfromlist.vcxproj  SampleMTCNNfromlist.vcxproj.filters
SamplesZQCNN/SampleMatMul/: MatMul_AB.cpp  MatMul_AB.h  MatMul_ABt.cpp  MatMul_ABt.h  SampleMatMul.cpp  SampleMatMul.vcxproj  SampleMatMul.vcxproj.filters
SamplesZQCNN/SampleMatMulNEON/: SampleMatMulNEON.cpp  SampleMatMulNEON.vcxproj  SampleMatMulNEON.vcxproj.filters
SamplesZQCNN/SampleMatMulNEON_FP16/: SampleMatMulNEON_FP16.cpp  SampleMatMulNEON_FP16.vcxproj
SamplesZQCNN/SampleMobileFaceNet/: SampleMobileFaceNet.cpp  SampleMobileFaceNet.vcxproj  SampleMobileFaceNet.vcxproj.filters
SamplesZQCNN/SampleNCNNsgemm/: SampleNCNNsgemm.cpp  SampleNCNNsgemm.vcxproj  SampleNCNNsgemm.vcxproj.filters  allocator.cpp  convolution_1x1.h  mat.h  platform.h
SamplesZQCNN/SampleNSFW/: SampleNSFW.cpp  SampleNSFW.vcxproj  SampleNSFW.vcxproj.filters
SamplesZQCNN/SampleOCR/: SampleOCR.cpp  SampleOCR.vcxproj  SampleOCR.vcxproj.filters
SamplesZQCNN/SamplePersonPose/: SamplePersonPose.cpp  SamplePersonPose.vcxproj  SamplePersonPose.vcxproj.filters
SamplesZQCNN/SamplePersonPose2Video/: SamplePersonPose2Video.cpp  SamplePersonPose2Video.vcxproj  SamplePersonPose2Video.vcxproj.filters
SamplesZQCNN/SamplePersonPoseVideo/: SamplePersonPoseVideo.cpp  SamplePersonPoseVideo.vcxproj  SamplePersonPoseVideo.vcxproj.filters
SamplesZQCNN/SamplePnet/: SamplePnet.cpp  SamplePnet.vcxproj  SamplePnet.vcxproj.filters
SamplesZQCNN/SampleSSD/: SampleSSD.cpp  SampleSSD.vcxproj
SamplesZQCNN/SampleSSDDetectorPytorch/: SampleSSDDetectorPytorch.cpp  SampleSSDDetectorPytorch.vcxproj  SampleSSDDetectorPytorch.vcxproj.filters
SamplesZQCNN/SampleSphereFaceNet/: SampleSphereFaceNet.cpp  SampleSphereFaceNet.vcxproj  SampleSphereFaceNet.vcxproj.filters
SamplesZQCNN/SampleSphereFaceNetLoadFromBuffer/: SampleSphereFaceNetLoadFromBuffer.cpp  SampleSphereFaceNetLoadFromBuffer.vcxproj  SampleSphereFaceNetLoadFromBuffer.vcxproj.filters
SamplesZQCNN/SampleSwapFace/: SampleSwapFace.cpp  SampleSwapFace.vcxproj  SampleSwapFace.vcxproj.filters
SamplesZQCNN/model2code/: model2code.cpp  (+2 more)
SamplesZQlibFaceID/: CMakeLists.txt
ZQCNN/: CMakeLists.txt  ZQCNN.vcxproj  ZQCNN.vcxproj.filters  ZQ_CNN_BBox.h  ZQ_CNN_BBoxUtils.h  ZQ_CNN_CascadeOnet.h  ZQ_CNN_CascadeOnet_Interface.h  ZQ_CNN_CompileConfig.h  ZQ_CNN_ComplieConfig.h  ZQ_CNN_Defines.h  ZQ_CNN_DetectorInterface.h  ZQ_CNN_FaceCropUtils.h  ZQ_CNN_Forward_SSEUtils.cpp  ZQ_CNN_Forward_SSEUtils.h  ZQ_CNN_Forward_SSEUtils_NCHWC.cpp  ZQ_CNN_Forward_SSEUtils_NCHWC.h  ZQ_CNN_Landmark240.h  ZQ_CNN_Layer.h  ZQ_CNN_Layer_NCHWC.h  ZQ_CNN_LoadConfigUtils.cpp  ZQ_CNN_LoadConfigUtils.h  ZQ_CNN_MTCNN.h  ZQ_CNN_MTCNN_AspectRatio.h  ZQ_CNN_MTCNN_Interface.h  ZQ_CNN_MTCNN_NCHWC.h  ZQ_CNN_MTCNN_ncnn.h  ZQ_CNN_MTCNN_old.h  ZQ_CNN_MouthDetector.h  ZQ_CNN_NSFW.h  ZQ_CNN_Net.h  ZQ_CNN_Net_Interface.h  ZQ_CNN_Net_NCHWC.cpp  ZQ_CNN_Net_NCHWC.h  ZQ_CNN_PersonPose.h  ZQ_CNN_PersonPose2.h  ZQ_CNN_SSD.h  ZQ_CNN_SSDDetectorPytorch.cpp  ZQ_CNN_SSDDetectorPytorch.h  ZQ_CNN_SSDDetectorUtils.h  ZQ_CNN_Tensor4D.cpp  (+7 more)
(+671 files in other folders)
