
MACRO(SUBDIRLIST result curdir)
FILE(GLOB children RELATIVE ${curdir} ${curdir}/*)
SET(dirlist "")
FOREACH(child ${children})
    IF(IS_DIRECTORY ${curdir}/${child})
        LIST(APPEND dirlist ${child})
    ENDIF()
ENDFOREACH()
SET(${result} ${dirlist})
ENDMACRO()

find_package(OpenCV REQUIRED)
if(NOT OPENCV_FOUND)
    include_directories(${CMAKE_CURRENT_LIST_DIR}/../3rdparty/opencv/build/include)
    set(OpenCV_LIBS ${CMAKE_CURRENT_LIST_DIR}/../3rdparty/opencv/build/x64/vc14/lib/opencv_world342.lib)
endif()

find_package(OpenMP REQUIRED)
if(OPENMP_FOUND)
    message("OPENMP FOUND")
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

include_directories(${ZQCNN_INCLUDE_DIRS})
link_directories(${ZQCNN_LIBRARY_DIR})

SUBDIRLIST(SAMPLE_SUBDIRS ${CMAKE_CURRENT_LIST_DIR})
foreach(SAMPLE_SUBDIR ${SAMPLE_SUBDIRS})
    message(STATUS "add sample ${SAMPLE_SUBDIR}")
    file(GLOB sample_src ${CMAKE_CURRENT_LIST_DIR}/${SAMPLE_SUBDIR}/*.cpp
                        ${CMAKE_CURRENT_LIST_DIR}/${SAMPLE_SUBDIR}/*.c)
    add_executable(${SAMPLE_SUBDIR} ${sample_src})
    if(SIMD_ARCH_TYPE MATCHES "arm")
        if(BLAS_TYPE MATCHES "(Openblas|OPENBLAS|openblas|OpenBLAS)")
            target_link_libraries(${SAMPLE_SUBDIR} ZQCNN openblas ${OpenCV_LIBS})
        elseif(BLAS_TYPE MATCHES "openblas_zq_gemm")
            target_link_libraries(${SAMPLE_SUBDIR} ZQCNN openblas ZQ_GEMM ${OpenCV_LIBS})
        else()
            target_link_libraries(${SAMPLE_SUBDIR} ZQCNN ZQ_GEMM ${OpenCV_LIBS})
        endif()
    elseif(SIMD_ARCH_TYPE MATCHES "arm64")
        if(BLAS_TYPE MATCHES "(Openblas|OPENBLAS|openblas|OpenBLAS)")
            target_link_libraries(${SAMPLE_SUBDIR} ZQCNN openblas ${OpenCV_LIBS})
        elseif(BLAS_TYPE MATCHES "openblas_zq_gemm")
            target_link_libraries(${SAMPLE_SUBDIR} ZQCNN openblas ZQ_GEMM ${OpenCV_LIBS})
        else()
            target_link_libraries(${SAMPLE_SUBDIR} ZQCNN ZQ_GEMM ${OpenCV_LIBS})
        endif()
    else()
        target_link_libraries(${SAMPLE_SUBDIR} ZQCNN ZQ_GEMM ${OpenCV_LIBS})
    endif()
endforeach()

